@startuml
entity "Friend" {
    * id : Integer <<PK>>
    * name : String
    * role : String
    * description : Text
    * gender : String
    img_url : String
    + created_at : DateTime
    + updated_at : DateTime
}

entity "User" {
    * user_id : Integer <<PK>>
    username : String <<UNIQUE>>
    password : String
    email : String <<UNIQUE>>
}

entity "Friendship" {
    * friendship_id : Integer <<PK>>
    - user_id : Integer <<FK>>
    - friend_id : Integer <<FK>>
    friendship_date : Date
    status : String <<enum>>
}

User ||--o{ Friendship : "user_id"
Friend ||--o{ Friendship : "friend_id"
@enduml
